--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 						<workingDirectory>target/checkout/trunk</workingDirectory>
 					</configuration>
 				</plugin>
+				<plugin>
+                    <groupId>com.googlecode.maven-gcu-plugin</groupId>
+                    <artifactId>maven-gcu-plugin</artifactId>
+                    <version>1.1</version>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
