--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-libs</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.4-SNAPSHOT</version>
+	<version>2.1.4</version>
 	<description>
 		This module/project is just for the libraries that are used by Ikube that are not
 		in a public repository. This pom will install the libraries used to the ikube Artifactory.
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.4-SNAPSHOT</version>
+		<version>2.1.4</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
