--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>2.1.4</version>
+	<version>2.1.5-SNAPSHOT</version>
 
 	<properties>
 		<jetty.version>6.1.11</jetty.version>
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.1.4</version>
+		<version>2.1.5-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
