--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>2.1.4</version>
+	<version>2.1.5-SNAPSHOT</version>
 	
 	<scm>
-		<url>https://ikube.googlecode.com/svn/tags/ikube-2.1.4</url>
-		<connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.4</connection>
-		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-2.1.4</developerConnection>
+		<url>https://ikube.googlecode.com/svn/trunk</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
 	</scm>
 	
 	<distributionManagement>
