Changed the fail on error for the Google Upload plugin to false.
git-svn-id: http://ikube.googlecode.com/svn/trunk@680 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -211,7 +211,7 @@
 				</executions>
 				<configuration>
 					<serverId>googlecode</serverId>
-					<failsOnError>true</failsOnError>
+					<failsOnError>false</failsOnError>
 					<projectName>${project.groupId}</projectName>
 					<uploads>
 						<upload>
