--- a/pom.xml
+++ b/pom.xml
@@ -573,7 +573,7 @@
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
-			<version>1.9.3.1</version>
+			<version>[1.9.3.1,)</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
