--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -8,7 +8,7 @@
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
 		</antcall>
-		<sleep seconds="${sleep}" />
+		<!-- sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
@@ -19,7 +19,7 @@
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
 			<param name="tomcat.home" value="${tomcat.3}" />
-		</antcall>
+		</antcall -->
 	</target>
 	<target name="stop.tomcat.cluster">
 		<antcall target="executeTomcatAction">
