Changed to yet another cache provider, Infinispan. Seems promising, but still not automatic clustering via Udp. We live in hope.
git-svn-id: http://ikube.googlecode.com/svn/trunk@696 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,4 +1,7 @@
+############################
 ## This file should be modified by clients ##
+############################
+
 # Maximum age of the indexes defined in minutes
 max.age=6000
 
@@ -22,13 +25,8 @@ throttle=0
 # These are client specific for Lucene
 analyzed=true
 stored=true
+not.stored=false
 vectored=true
-
-# The Oracle datasource credentials
-oracle.jdbc.userid=XE
-oracle.jdbc.password=admin
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
-oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 # The number of threads for each indexing component/connector
 table.handler.threads=3
