--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,4 +1,6 @@
+####################################
 ## This file should not be modified by clients generally ##
+####################################
 
 # The delay before the scheduled tasks start executing
 delay=180000
@@ -14,19 +16,23 @@ ikube.url.9000=http://localhost:9000/ikube/index.html
 ikube.url.dyndns=http://ikube.dyndns.org:8080/ikube/index.html
 ikube.google.code=http://code.google.com/p/ikube/
 
-not.stored=false
-
-# The H2 datasource credentials
+# The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.url=jdbc:h2:file:ikube
 h2.jdbc.driver=org.h2.Driver
 
-# The DB2 datasource credentials
+# The DB2 database credentials
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
 db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+
+# The Oracle database credentials
+oracle.jdbc.userid=XE
+oracle.jdbc.password=admin
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
+oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 #General JDBC settings
 jdbc.minPoolSize=5
@@ -40,20 +46,24 @@ jdbc.testConnectionOnCheckin=true
 jdbc.testConnectionOnCheckout=true
 jdbc.unreturnedConnectionTimeout=120000
 
+# H2 database, this is for distribution and production. This 
+# database is what ikube will use in the field
 ikube.dataSource=nonXaDataSourceH2
 ikube.persistenceUnit=IkubePersistenceUnitH2
 ikube.dataSourceType=H2
-ikube.jdbc.userid=sa
+ikube.jdbc.userid=${h2.jdbc.userid}
 ikube.jdbc.password=
-ikube.jdbc.url=jdbc:h2:file:ikube
-ikube.jdbc.driver=org.h2.Driver
+ikube.jdbc.url=${h2.jdbc.url}
+ikube.jdbc.driver=${h2.jdbc.driver}
 ikube.jdbc.dictionary=h2(batchLimit=1000)
 
-# ikube.dataSource=nonXaDataSourceDb2
-# ikube.persistenceUnit=IkubePersistenceUnitDb2
-# ikube.dataSourceType=DB2
-# ikube.jdbc.userid=db2admin
-# ikube.jdbc.password=db2admin
-# ikube.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
-# ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
-# ikube.jdbc.dictionary=db2(batchLimit=1000)
+# Db2 database, this database is for testing essentially as
+# there is always an instance running on the server
+#ikube.dataSource=nonXaDataSourceDb2
+#ikube.persistenceUnit=IkubePersistenceUnitDb2
+#ikube.dataSourceType=DB2
+#ikube.jdbc.userid=${db2.jdbc.userid}
+#ikube.jdbc.password=${db2.jdbc.password}
+#ikube.jdbc.url=${db2.jdbc.url}
+#ikube.jdbc.driver=${db2.jdbc.driver}
+#ikube.jdbc.dictionary=db2(batchLimit=1000)
