--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -60,21 +60,13 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+					<skip>true</skip>
 					<argLine>-Xms512m -Xmx2048m</argLine>
 					<forkMode>once</forkMode>
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
 				</configuration>
-				<executions>
-					<execution>
-						<id>failsafe</id>
-						<goals>
-							<!-- <goal>verify</goal> -->
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
