Re-factoring. Remove Hazelcast completely. Removed un-used tests and classes. Made all the static instance variables Spring loaded and configurable to be able to refresh the context dynamically.
git-svn-id: http://ikube.googlecode.com/svn/trunk@699 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -3,7 +3,7 @@
 	<property file="build.properties" />
 
 	<target name="start.tomcat.cluster">
-		<antcall target="executeTomcatAction">
+		<!-- antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
@@ -14,7 +14,7 @@
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
 			<param name="tomcat.home" value="${tomcat.2}" />
 		</antcall>
-		<!-- sleep seconds="${sleep}" />
+		<sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
