--- a/code/core/src/main/resources/META-INF/log4j.properties
+++ b/code/core/src/main/resources/META-INF/log4j.properties
@@ -20,6 +20,7 @@ log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%
 # set the categories
 log4j.category.net=WARN
 log4j.category.com=WARN
+log4j.category.com.atomikos.diagnostics=WARN
 # log4j.category.org=WARN
 log4j.category.org.springframework=WARN
 log4j.category.net.htmlparser=WARN
@@ -31,7 +32,7 @@ log4j.category.org.apache.jcs=INFO
 log4j.category.org.apache.jcs.auxiliary.remote=DEBUG
 log4j.category.org.apache.jcs.auxiliary.lateral=DEBUG
 
-# log4j.category.org.apache.openjpa=TRACE
+log4j.category.bitronix.tm.twopc=ERROR
 
 log4j.category.ikube=INFO
 log4j.category.ikube.toolkit=INFO
