More re-factoring. Upgraded to Infinispan 5.1, beta in fact. Not operational in a cluster yet, still some transaction issues. Fixed some FindBug warnings.
git-svn-id: http://ikube.googlecode.com/svn/trunk@703 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -154,7 +154,7 @@
 							<target>
 								<!-- Try calling the Tomcats and shut them down. -->
 								<echo message="Turning off cluster : " />
-								<ant antfile="build.xml" target="stop.tomcat.cluster" inheritrefs="true" />
+								<!-- <ant antfile="build.xml" target="stop.tomcat.cluster" inheritrefs="true" /> -->
 							</target>
 						</configuration>
 						<goals>
