Re-factoring the integration tests into the war module.
git-svn-id: http://ikube.googlecode.com/svn/trunk@706 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -112,7 +112,7 @@
 				<executions>
 					<execution>
 						<id>enhancer</id>
-						<phase>process-classes</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>enhance</goal>
 						</goals>
