--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -61,6 +61,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.1</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*Integration*.java</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
