--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -61,10 +61,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.1</version>
 				<configuration>
-					<!-- <parallel>false</parallel> -->
+					<parallel>true</parallel>
 					<forkMode>once</forkMode>
-					<!-- <threadCount>10</threadCount>
-					<useUnlimitedThreads>true</useUnlimitedThreads> -->
+					<threadCount>10</threadCount>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
 					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}</argLine>
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
@@ -112,7 +112,7 @@
 				<executions>
 					<execution>
 						<id>enhancer</id>
-						<phase>package</phase>
+						<phase>process-classes</phase>
 						<goals>
 							<goal>enhance</goal>
 						</goals>
