--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
@@ -32,10 +33,7 @@
 			</resource>
 		</resources>
 		<plugins>
-			<!--
-				This plugin reads the properties from the buid.properties file and 
-				makes them all available to the rest of the Maven build process. 
-			 -->
+			<!-- This plugin reads the properties from the buid.properties file and makes them all available to the rest of the Maven build process. -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>properties-maven-plugin</artifactId>
@@ -54,9 +52,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--
-				This plugin runs the unit tests. 
-			 -->
+			<!-- This plugin runs the unit tests. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -71,19 +67,22 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<skip>true</skip>
-					<argLine>-Xms512m -Xmx1536m</argLine>
 					<forkMode>once</forkMode>
+					<argLine>-Xms512m -Xmx1536m</argLine>
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-			<!--
-				This plugin starts a Jetty server before the integration tests and stops 
-				it after the integration tests. It can also be used to start a jetty server from 
-				the command line for testing.
-			 -->
+			<!-- This plugin starts a Jetty server before the integration tests and stops it after the integration tests. It can also be used to start 
+				a jetty server from the command line for testing. -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
@@ -105,7 +104,7 @@
 					</connectors>
 				</configuration>
 				<executions>
-					<execution>
+					<!-- <execution>
 						<id>start-jetty</id>
 						<phase>pre-integration-test</phase>
 						<goals>
@@ -121,7 +120,7 @@
 						<goals>
 							<goal>stop</goal>
 						</goals>
-					</execution>
+					</execution> -->
 				</executions>
 				<dependencies>
 					<dependency>
@@ -141,12 +140,8 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<!--
-				This plugin runs an Ant script after the integration tests to deploy ikube.war 
-				to the cluster. The cluster directories are also cleaned, all the wars and exploded 
-				directories are deleted before the deploy. It will also start the Tomcats in the 
-				cluster.
-			 -->
+			<!-- This plugin runs an Ant script after the integration tests to deploy ikube.war to the cluster. The cluster directories are also cleaned, 
+				all the wars and exploded directories are deleted before the deploy. It will also start the Tomcats in the cluster. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -191,8 +186,8 @@
 								<echo message="Copying configuration to Tomcat bin : " />
 								<ant antfile="build.xml" target="copy.configuration" inheritrefs="true" />
 								<!-- Start the cluster of Tomcats. -->
-								<!-- <echo message="Starting the cluster of Tomcats : " />
-								<ant antfile="build.xml" target="start.tomcat.cluster" inheritrefs="true" /> -->
+								<!-- <echo message="Starting the cluster of Tomcats : " /> <ant antfile="build.xml" target="start.tomcat.cluster" inheritrefs="true" 
+									/> -->
 							</target>
 						</configuration>
 						<goals>
@@ -201,11 +196,8 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--
-				This plugin will upload the artifacts to Google code, making them available for 
-				download. Unfortunately this can't run in the deploy phase because the artifacts 
-				are still SNAPSHOTS, which is not what is required as a download. 
-			-->
+			<!-- This plugin will upload the artifacts to Google code, making them available for download. Unfortunately this can't run in the deploy 
+				phase because the artifacts are still SNAPSHOTS, which is not what is required as a download. -->
 			<plugin>
 				<groupId>com.googlecode.maven-gcu-plugin</groupId>
 				<artifactId>maven-gcu-plugin</artifactId>
