--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<main.class>ikube.Ikube</main.class>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
-		<memory.parameters>-Xms1024m -Xmx1536m -XX:PermSize=64m -XX:MaxPermSize=128m</memory.parameters>
+		<memory.parameters>-Xms512m -Xmx1024m -XX:PermSize=64m -XX:MaxPermSize=128m</memory.parameters>
 		<serenity.parameters>${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</serenity.parameters>
 	</properties>
 	
@@ -53,18 +53,16 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<!--
-				This plugin runs the unit tests. 
-			 -->
+			<!-- This plugin runs the unit tests. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.1</version>
 				<configuration>
-					<parallel>true</parallel>
+					<parallel>false</parallel>
 					<forkMode>once</forkMode>
-					<threadCount>10</threadCount>
-					<useUnlimitedThreads>true</useUnlimitedThreads>
+					<!-- <threadCount>10</threadCount> -->
+					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
 					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}</argLine>
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
@@ -129,13 +127,4 @@
 		</plugins>
 	</build>
 	
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa-all</artifactId>
-			<version>2.1.0</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
 </project>
