--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -1,7 +1,7 @@
 project.directory=.
 project.name=ikube
 ikube.version=2.1.2
-ikube.war=ikube-${ikube.version}.war
+ikube.war=ikube.war
 ikube.configuration.jar=configuration.jar
 
 sleep=30
