--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -3,7 +3,7 @@
 	<property file="build.properties" />
 
 	<target name="start.tomcat.cluster">
-		<!-- antcall target="executeTomcatAction">
+		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
@@ -14,7 +14,7 @@
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
 			<param name="tomcat.home" value="${tomcat.2}" />
 		</antcall>
-		<sleep seconds="${sleep}" />
+		<!-- sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
@@ -64,16 +64,15 @@
 	<target name="deploy">
 		<!-- Delete the index directories in the cluster. -->
 		<delete includeemptydirs="true" failonerror="false">
-			<fileset dir="${cluster.directory}/**/indexes/**" />
-		</delete>
-		<!-- Delete the ikube deployed directories in the cluster. -->
-		<delete includeemptydirs="true" failonerror="false">
-			<fileset dir="${cluster.directory}/**/ikube*/**" />
+			<fileset dir="${cluster.directory}/">
+				<include name="**/ikube*.war" />
+				<include name="**/ikube*/**" />
+			</fileset>
 		</delete>
 		<!-- Deploy the ikube war into the cluster. -->
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1}/webapps" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2}/webapps" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3}/webapps" overwrite="true" failonerror="false" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="false" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="false" />
 	</target>
 
 	<!-- 
@@ -101,8 +100,10 @@
 		</copy>
 		<jar destfile="${configuration.directory}/${ikube.configuration.jar}" basedir="${configuration.directory}" />
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
-		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${ikube.configuration.directory}" overwrite="true" />
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.2.bin}" overwrite="true" />
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.3.bin}" overwrite="true" />
 	</target>
 
 	<target name="startUbuntu">
