More re-factoring.
git-svn-id: http://ikube.googlecode.com/svn/trunk@741 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,6 +1,53 @@
-####################################
-## This file should not be modified by clients generally ##
-####################################
+#################################
+## These properties could be modified by clients ##
+#################################
+
+# Maximum age of the indexes defined in minutes
+max.age=6000
+
+# These parameters are destined for the index context
+buffer.size=256
+compound.file=false
+merge.factor=1000
+buffered.docs=1000
+max.field.length=1000
+max.read.length=10000000
+# \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
+index.directory.path=D:/cluster/indexes
+# \\\\Ikube\\D\\cluster\\indexes\\backup
+index.directory.path.backup=${index.directory.path}/backup
+jdbc.batch.size=10000
+internet.batch.size=1000
+file.batch.size=1000
+file.max.read.length=10000000
+throttle=0
+
+# These are client specific for Lucene
+analyzed=true
+stored=true
+not.stored=false
+vectored=true
+
+# The number of threads for each indexing component/connector
+table.handler.threads=3
+internet.handler.threads=3
+filesystem.handler.threads=3
+email.handler.threads=1
+
+# These parameters are client specific
+url=http://ikokoon.ikube.cloudbees.net/index.html
+url.million=http://localhost:9000/million/adapt.html
+faq.predicate=where faq.faqid < 10000000 and published = 1
+patient.predicate=where patient.id > 0
+files.path=./code/core/src/test/resources/data/files
+files.path.million=D:/apache-tomcat-6.0.26
+files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(.dtd).*|.*(.jsp).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
+
+
+################################################
+## These properties should generally not be modified by clients               ##
+################################################
 
 # The delay before the scheduled tasks start executing
 delay=600000
@@ -8,6 +55,7 @@ delay=600000
 period=60000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
+
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
@@ -67,51 +115,5 @@ ikube.jdbc.dictionary=h2(batchLimit=1000)
 #ikube.jdbc.url=${db2.jdbc.url}
 #ikube.jdbc.driver=${db2.jdbc.driver}
 #ikube.jdbc.dictionary=db2(batchLimit=1000)
-
-############################
-## This file should be modified by clients ##
-############################
-
-# Maximum age of the indexes defined in minutes
-max.age=6000
-
-# These parameters are destined for the index context
-buffer.size=256
-compound.file=false
-merge.factor=1000
-buffered.docs=1000
-max.field.length=1000
-max.read.length=10000000
-# \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=./indexes
-# \\\\Ikube\\D\\cluster\\indexes\\backup
-index.directory.path.backup=${index.directory.path}/backup
-jdbc.batch.size=10000
-internet.batch.size=1000
-file.batch.size=1000
-file.max.read.length=10000000
-throttle=0
-
-# These are client specific for Lucene
-analyzed=true
-stored=true
-not.stored=false
-vectored=true
-
-# The number of threads for each indexing component/connector
-table.handler.threads=3
-internet.handler.threads=3
-filesystem.handler.threads=3
-email.handler.threads=1
-
-# These parameters are client specific
-url=http://ikokoon.ikube.cloudbees.net/index.html
-url.million=http://localhost:9000/million/adapt.html
-faq.predicate=where faq.faqid < 10000000 and published = 1
-patient.predicate=where patient.id > 0
-files.path=./code/core/src/test/resources/data/files
-files.path.million=D:/apache-tomcat-6.0.26
-files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
 
 activemq.port=61616
