Re-working the cluster synchronization logic, and doing cluster integration tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@744 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -41,7 +41,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
-files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(.dtd).*|.*(.jsp).*
+files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(.dtd).*|.*(.jsp).*|.*(Personal).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
 
 
@@ -96,24 +96,26 @@ jdbc.unreturnedConnectionTimeout=120000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.userid=${h2.jdbc.userid}
-ikube.jdbc.password=
-ikube.jdbc.url=${h2.jdbc.url}
-ikube.jdbc.driver=${h2.jdbc.driver}
-ikube.jdbc.dictionary=h2(batchLimit=1000)
+#ikube.dataSource=nonXaDataSourceH2
+#ikube.persistenceUnit=IkubePersistenceUnitH2
+#ikube.dataSourceType=H2
+#ikube.jdbc.userid=${h2.jdbc.userid}
+#ikube.jdbc.password=
+#ikube.jdbc.url=${h2.jdbc.url}
+#ikube.jdbc.driver=${h2.jdbc.driver}
+#ikube.jdbc.dictionary=h2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-#ikube.dataSource=nonXaDataSourceDb2
-#ikube.persistenceUnit=IkubePersistenceUnitDb2
-#ikube.dataSourceType=DB2
-#ikube.jdbc.userid=${db2.jdbc.userid}
-#ikube.jdbc.password=${db2.jdbc.password}
-#ikube.jdbc.url=${db2.jdbc.url}
-#ikube.jdbc.driver=${db2.jdbc.driver}
-#ikube.jdbc.dictionary=db2(batchLimit=1000)
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=${db2.jdbc.userid}
+ikube.jdbc.password=${db2.jdbc.password}
+ikube.jdbc.url=${db2.jdbc.url}
+ikube.jdbc.driver=${db2.jdbc.driver}
+ikube.jdbc.dictionary=db2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 activemq.port=61616
